修改了登陆界面
第三次提交“ruanxinPC-login”

--- a/商家后台登陆界面/css/login.css
+++ b/商家后台登陆界面/css/login.css
@@ -4,7 +4,9 @@
 	padding: 0;
 }
 body{
+	
 	font-family:"microsoft yahei" ,sans-serif;
+	margin: 0 auto;
 }
 a:link{text-decoration:none;}
 a:visited{text-decoration:none;}
@@ -13,22 +15,104 @@ a:active{text-decoration:none;}
 img{
 	border: none;
 }
+/*header开始*/
+.bj1{
+	height: 70px;
+	margin: 0 auto;
+    position: relative;
+}
+.bj1 a,
+.bj4 a{
+	color:#A0A0A0;
+	font-family: "微软雅黑","宋体",Arial;
+	font-size: 16px;
+	text-decoration: none;
+	}
+.bj1 a:hover,
+.bj4 a:hover{
+	color: #f3ab3a;
+	text-decoration: none;
+	}
+.bj1box{
+	width: 1080px;
+	margin: 0 auto;
+	height: 70px;
+}
+.bj1 ul {
+	width: 660px;
+	float: right;
+	height: 30px;
+	padding: 20px 0;
+}
+.bj1nav li {
+	float: right;
+	list-style-type: none;
+	line-height: 30px;
+	width: 80px;
+	padding-right: 25px;
+	position: relative;
+}
+.bj1nav li ul{
+	display: none;
+	position: absolute;
+	width: 105px;
+	left: 0;
+}
+.bj1nav li:hover ul{
+	display:block;
+	z-index: 1000;
+}
+.bj1nav li a {
+	display: block;
+}
+.bj1navli a{
+	padding-right: 0;
+}
+
+.bj1 p {
+	width: 250px;
+	/*line-height: 30px;*/
+	line-height: 70px;
+	float: left;
+	color: #999;
+	/*height: 30px;*/
+	height: 70px;
+}
+/*header结束*/
+/*footer开始*/
+.bj4{
+	height: 80px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.bj4 p {
+	width: 1080px; 
+	margin: 0 auto;
+	line-height:80px;
+}
+.bj4 p span {
+	float: right;
+}
+/*footer结束*/
+/*content开始*/
+.login{
+	background-color: #EEE;
+}
 .login .login-head{
-	width:960px;
-	margin:20px auto;
+	margin:0 auto;
 	height: 70px;
 	}
-.login .login-head .login-head-a{
+.login-head-a{
 	text-align: center;
 	float: left;
+	width: 60px;
 	}
-.login .login-head .login-head-a img{}
-.login .login-head .login-head-a p{
+.login-head-a img{}
+.login-head-a p{
 	font-size:16px;
 	margin: 0;
 	}
-.login .login-head .login-head-b{
-	border-left: 1px solid #666666;
+.login-head-b{
 	float: left;
 	height: 75px;
 	line-height: 75px;
@@ -39,16 +123,16 @@ img{
 	}
 .login .login-con{
 	text-align: center;
-	background-color: #efefef;
-	height:450px;
+	min-height: 550px;
 	}
 .login .login-con .login-a{
 	background: url(../img/pay-bg-3.jpg)no-repeat;
-	width:1000px;
+	background-size: 1080px 550px;
+	width:1080px !important;
 	margin: 0 auto;
 	text-align: left;
 	padding-top: 0px;
-	min-height: 450px;
+	min-height: 550px;
 	}
 
 .login .login-con .login-a .login-b,
@@ -56,8 +140,8 @@ img{
 	float: right;
 	width: 344px;
 	height: 387px;
-	margin-right: 60px;
-	margin-top: 20px;
+	margin-right: 98px;
+	margin-top: 85px;
 	background: #fff;
 	position: relative;
 	filter:alpha(opacity=85); /*IE滤镜，透明度50%*/
@@ -65,7 +149,6 @@ img{
     opacity:0.85;/*其他，透明度50%*/
 	}
 .login-b-a{
-	/*background-color: #E3E3E3;*/
 	height: 46px;
 	line-height: 46px;
 	font-size: 16px;
@@ -172,12 +255,6 @@ img{
 	color: #f3ab3a;
 	text-decoration: none;
 	}
-.login .login-foot{ 
-	text-align: center;
-	font-size: 14px;
-	color: #666666;
-	margin-top: 50px;
-	}
 
 .code{      
 background-image:url(w1.jpg);      
@@ -225,4 +302,27 @@ font-weight:bolder;
 }
 .login-c3 a{
 	text-decoration: none;
+}
+.Llogo{
+	width:50px;
+	height:70px ;
+	text-align:center;
+}
+.Llogo .Llogoimg{
+	width:40px;
+	height: 40px;
+	padding-top:10px;
+	display:inline-block;
+	text-align:center;
+}
+.Llogo .Llogoimg a{
+	font-size: 14px;
+}
+.LlogoW{
+	display:inline-block;
+	position: relative;
+	top: -22px;
+	left:30px;
+	text-align: center;
+	font-size:26px;
 }
